--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
 
                 <div class="form-group">
                     <label>ชื่อยี่ห้อสินค้า</label>
-                    <input type="text" name="brand" placeholder="เช่น Samsung, LG, Sony">
+                    <input type="text" name="brand" placeholder="AWOL 3000 pro">
                 </div>
 
                 <div class="form-group">
                     <label>รุ่นสินค้า</label>
-                    <input type="text" name="model" placeholder="เช่น UA55AU7700, OLED65C1PTB">
+                    <input type="text" name="model" placeholder="">
                 </div>
 
                 <div class="form-group">
