--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         createApp({
             setup() {
-                const liffReady = ref(false);
+                const Ready = ref(false);
                 const profile = ref(null);
                 const submitting = ref(false);
                 const showSuccess = ref(false);
@@ -364,7 +364,7 @@
                 const initLiff = async () => {
                     try {
                         // Using the provided LIFF ID
-                        await liff.init({ liffId: "2008863808-e2MCAccQ" });
+                        await liff.init({ liffId: "2008863808-6cU9sNGm" });
 
                         if (liff.isLoggedIn()) {
                             profile.value = await liff.getProfile();
