--- a/index.html
+++ b/index.html
@@ -95,15 +95,39 @@
                         <i
                             class="fa-solid fa-chevron-down absolute right-4 top-1/2 -translate-y-1/2 text-slate-400 pointer-events-none"></i>
                     </div>
-                    <!-- Car Type Badge -->
-                    <div v-if="selectedCar" class="mt-2 flex gap-2">
-                        <span
-                            :class="['text-[10px] px-2 py-1 rounded-md font-bold uppercase tracking-wide border', 
-                            selectedCar.type === 'EV' ? 'bg-emerald-50 text-emerald-600 border-emerald-100' : 'bg-orange-50 text-orange-600 border-orange-100']">
-                            <i
-                                :class="selectedCar.type === 'EV' ? 'fa-solid fa-bolt mr-1' : 'fa-solid fa-gas-pump mr-1'"></i>
-                            {{ selectedCar.type }}
-                        </span>
+
+                    <!-- Car Type Badge & Dates -->
+                    <div v-if="selectedCar" class="mt-3 space-y-3">
+                        <div class="flex gap-2">
+                            <span
+                                :class="['text-[10px] px-2 py-1 rounded-md font-bold uppercase tracking-wide border', 
+                                selectedCar.type === 'EV' ? 'bg-emerald-50 text-emerald-600 border-emerald-100' : 'bg-orange-50 text-orange-600 border-orange-100']">
+                                <i
+                                    :class="selectedCar.type === 'EV' ? 'fa-solid fa-bolt mr-1' : 'fa-solid fa-gas-pump mr-1'"></i>
+                                {{ selectedCar.type }}
+                            </span>
+                        </div>
+
+                        <!-- Booking Dates -->
+                        <div
+                            class="bg-indigo-50/50 border border-indigo-100 rounded-xl p-3 flex justify-between items-center">
+                            <div class="text-center">
+                                <span
+                                    class="text-[10px] text-indigo-400 font-bold uppercase tracking-wider block mb-1">Start
+                                    Date</span>
+                                <span class="text-sm font-bold text-slate-700">{{ formatDate(selectedCar.start)
+                                    }}</span>
+                            </div>
+                            <div class="text-indigo-200">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </div>
+                            <div class="text-center">
+                                <span
+                                    class="text-[10px] text-indigo-400 font-bold uppercase tracking-wider block mb-1">End
+                                    Date</span>
+                                <span class="text-sm font-bold text-slate-700">{{ formatDate(selectedCar.end) }}</span>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
@@ -394,6 +418,8 @@
                                 options.push({
                                     ...carDetails, // id, plate, model, color, type
                                     bookingId: booking.id, // Keep track of booking ID if needed
+                                    start: booking.start,
+                                    end: booking.end,
                                     displayLabel: `${carDetails.plate} - ${carDetails.model} (${carDetails.color})`
                                 });
                             }
@@ -409,6 +435,17 @@
                         console.error('Failed to fetch bookings', err);
                         // Fallback? Or just leave empty
                     }
+                };
+
+                const formatDate = (dateStr) => {
+                    if (!dateStr) return '-';
+                    const d = new Date(dateStr);
+                    // Check if valid date
+                    if (isNaN(d.getTime())) return dateStr;
+
+                    return d.getDate().toString().padStart(2, '0') + '/' +
+                        (d.getMonth() + 1).toString().padStart(2, '0') + '/' +
+                        d.getFullYear();
                 };
 
                 const initLiff = async () => {
@@ -472,7 +509,8 @@
                     closeWindow,
                     calculatedDistance,
                     calculatedReimburse,
-                    selectableCars
+                    selectableCars,
+                    formatDate
                 };
             }
         }).mount('#app');
