--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 }
             }
         }
-    </script>
+    </>
 </head>
 
 <body class="bg-slate-50 text-slate-600 font-sans h-screen flex flex-col overflow-hidden">
@@ -46,7 +46,7 @@
     <div id="loading-fallback" class="fixed inset-0 flex items-center justify-center bg-white z-50">
         <div class="text-center">
             <p class="text-slate-500 mb-2">Connecting to LINE...</p>
-            <noscript class="text-red-500 text-sm">Please enable JavaScript.</noscript>
+            <no class="text-red-500 text-sm">Please enable Java.</no>
         </div>
     </div>
 
@@ -260,7 +260,7 @@
     </div>
 
     <script>
-        const API_URL = 'https://script.google.com/macros/s/AKfycbz6o4K22hLOKYf6CRdznanyi-sm6zJcuoihYG2CbXexcmFoI-uhy8DgHR2IhEdqjB9kUA/exec';
+        const API_URL = 'https://script.google.com/macros/s/AKfycbwke9LNJQeFBwbgmpmUZyS4-QB8ZDqsxe_pRLkeFvykanJ7Y576NpRXcQcFu9l1HHNMbg/exec';
 
         const { createApp, ref, reactive, computed, watch, onMounted } = Vue;
 
