--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
     </div>
 
     <script>
-         API_URL = 'https://script.google.com/macros/s/AKfycbxH-J53_HGYoJ9qbdRXYb44BW_1m_kBIwb69lDCEkyVhu3kAK3oUU7KFWIuuFXFq5IMQg/exec';
+         API_URL = 'https://script.google.com/macros/s/AKfycbwk3qmXlcqK0QpC143Pl2EsIjA7DQc1Wy-hRqlKUq0WABFqf8TkPyImD5-Q-KUew4XKaA/exec';
 
-        const { createApp, ref, reactive, computed, watch, onMounted } = Vue;
+         { createApp, ref, reactive, computed, watch, onMounted } = Vue;
 
         createApp({
             setup() {
