--- a/index.html
+++ b/index.html
@@ -247,14 +247,14 @@
     </div>
 
     <script>
-         API_URL = 'https://script.google.com/macros/s/AKfycbyGGT5cjy3UGjtpBOI3f0FzB5MAT-0RVdvsdxIH8hICX4KxoDu3yvnKK0eVff6JbBXwjw/exec';
+         API_URL = 'https://script.google.com/macros/s/AKfycbzqe0f4Aoh-4quFWx7ZIbQZR3m1bwygCO6yhcblSH2_RiRu7hEcT8bKfbeHauZPh5te/exec';
 
          { createApp, ref, reactive, computed, watch, onMounted } = Vue;
 
         createApp({
             setup() {
                  liffReady = ref(false);
-                const profile = ref(null);
+                 profile = ref(null);
                 const submitting = ref(false);
                 const showSuccess = ref(false);
 
